--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
-    <title>Practica 1</title>
+    <title> Playron </title>
 </head>
 <body>
     <div class="app">
 
         <header class="t">
-            <h1> Proyecto 1 </h1>
+            <h1> Zero Sum </h1>
         </header>
         
         <main class="cont">
